feat: host Speed Dating locally with CV buttons; update nav and remove redirects

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <a href="#about" class="hover:text-yellow-300 transition-colors duration-300" data-lang-key="navAbout">About</a>
                 <a href="#event" class="hover:text-yellow-300 transition-colors duration-300" data-lang-key="navEvent">Event</a>
                 <a href="#gallery" class="hover:text-yellow-300 transition-colors duration-300" data-lang-key="navGallery">Gallery</a>
-                <a href="https://speeddating01.vercel.app/" target="_blank" rel="noopener" class="hover:text-yellow-300 transition-colors duration-300">Speed Dating</a>
+                <a href="/speed-dating/" class="hover:text-yellow-300 transition-colors duration-300">Speed Dating</a>
                 <a href="#contact" class="hover:text-yellow-300 transition-colors duration-300" data-lang-key="navContact">Contact</a>
                 
                 <!-- Language Switcher -->
@@ -114,7 +114,7 @@
             <a href="#about" class="block py-2 hover:text-yellow-300 transition" data-lang-key="navAbout">About</a>
             <a href="#event" class="block py-2 hover:text-yellow-300 transition" data-lang-key="navEvent">Event</a>
             <a href="#gallery" class="block py-2 hover:text-yellow-300 transition" data-lang-key="navGallery">Gallery</a>
-            <a href="https://speeddating01.vercel.app/" target="_blank" rel="noopener" class="block py-2 hover:text-yellow-300 transition">Speed Dating</a>
+            <a href="/speed-dating/" class="block py-2 hover:text-yellow-300 transition">Speed Dating</a>
             <a href="#contact" class="block py-2 hover:text-yellow-300 transition" data-lang-key="navContact">Contact</a>
             <div class="border-t border-gray-700 mt-4 pt-4">
                 <div class="flex flex-wrap gap-x-2 gap-y-2 text-sm">
