--- a/speed-dating/index.html
+++ b/speed-dating/index.html
@@ -31,6 +31,68 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      (function () {
+        const FORM_URL = 'https://forms.gle/6BsSEncxRtUtQqes8';
+        const WAITLIST_TEXTS = [
+          'Join Early Access Waitlist',
+          'Join the Waitlist',
+          'Get Early Access',
+          'Early access',
+          'Early Access'
+        ];
 
+        function isWaitlistText(text) {
+          if (!text) return false;
+          const t = text.trim().toLowerCase();
+          return WAITLIST_TEXTS.some(x => t.includes(x.toLowerCase()));
+        }
+
+        function replaceCtas(root) {
+          const clickable = root.querySelectorAll('a, button');
+          clickable.forEach(el => {
+            if (isWaitlistText(el.textContent)) {
+              const a = document.createElement('a');
+              a.href = FORM_URL;
+              a.target = '_blank';
+              a.rel = 'noopener';
+              a.textContent = 'Register now';
+              // carry button styles if present
+              a.className = el.className || '';
+              if (!a.className) {
+                a.style.display = 'inline-block';
+                a.style.background = '#F59E0B';
+                a.style.color = '#111827';
+                a.style.fontWeight = '700';
+                a.style.padding = '12px 24px';
+                a.style.borderRadius = '9999px';
+                a.style.textDecoration = 'none';
+              }
+              el.replaceWith(a);
+            }
+          });
+
+          // hide explanatory waitlist-only sections
+          const all = root.querySelectorAll('p, h2, h3, section, div');
+          all.forEach(node => {
+            const txt = (node.textContent || '').trim();
+            if (isWaitlistText(txt)) {
+              const section = node.closest('section') || node;
+              section.style.display = 'none';
+            }
+          });
+        }
+
+        // observe SPA renders
+        const obs = new MutationObserver(() => replaceCtas(document));
+        obs.observe(document.documentElement, { childList: true, subtree: true });
+
+        if (document.readyState === 'loading') {
+          document.addEventListener('DOMContentLoaded', () => replaceCtas(document));
+        } else {
+          replaceCtas(document);
+        }
+      })();
+    </script>
   </body>
 </html>
