--- a/speed-dating/index.html
+++ b/speed-dating/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <base href="/speed-dating/">
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asian Speed Dating Brisbane - Meet Brisbane's Asian Singles | Lounge Asia</title>
