Bust cache for updated navigation

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Lounge Asia - Brisbane's East Asian Community</title>
     
     <!-- Optimized CSS -->
-    <link rel="preload" href="assets/main.min.css" as="style">
-    <link rel="stylesheet" href="assets/main.min.css">
+    <link rel="preload" href="assets/main.min.css?v=20241020" as="style">
+    <link rel="stylesheet" href="assets/main.min.css?v=20241020">
 
     <!-- Google Fonts: Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -267,7 +267,7 @@
         </div>
     </footer>
 
-    <script src="assets/main.min.js" defer></script>
+    <script src="assets/main.min.js?v=20241020" defer></script>
 </body>
 </html>
 
