--- a/index.html
+++ b/index.html
@@ -13,8 +13,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="preload" as="image" href="https://i.ibb.co/BHC9QM5p/IMG-1059.jpg" crossorigin="anonymous">
+    <link rel="preload" as="image" href="assets/hero-bg-desktop.webp" type="image/webp">
+    <link rel="preload" as="image" href="assets/hero-bg-mobile.webp" type="image/webp" media="(max-width: 768px)">
     <meta name="theme-color" content="#111827">
+    <style>
+        .hero-landing {
+            background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('assets/hero-bg-desktop.webp');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        @media (max-width: 768px) {
+            .hero-landing {
+                background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('assets/hero-bg-mobile.webp');
+            }
+        }
+    </style>
 </head>
 <body class="bg-gray-900 text-white">
 
@@ -52,7 +67,7 @@
 
     <main>
         <!-- ===== Hero Section ===== -->
-        <section class="min-h-screen flex items-center justify-center bg-cover bg-center bg-no-repeat" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://i.ibb.co/BHC9QM5p/IMG-1059.jpg');">
+        <section class="hero-landing min-h-screen flex items-center justify-center bg-no-repeat">
             <div class="text-center text-white p-6">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4 reveal" data-lang-key="heroTitle">Lounge Asia</h1>
                 <p class="text-lg md:text-2xl mb-8 reveal" style="transition-delay: 200ms;" data-lang-key="heroSubtitle">Your East Asian Community in Brisbane</p>
