Center hero subjects on mobile

--- a/speed-dating/index.html
+++ b/speed-dating/index.html
@@ -38,13 +38,8 @@
       }
       @media (max-width: 768px) {
         .hero-speed-dating {
-          background-position: 50% 28%;
-        }
-      }
-      @media (max-width: 480px) {
-        .hero-speed-dating {
-          background-position: 50% 35%;
-          background-size: 115%;
+          /* Shift focal point so both people remain visible on mobile */
+          background-position: 35% 35%;
         }
       }
     </style>
