Update shared layout styles and metadata

--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lounge Asia - Brisbane's East Asian Community</title>
+    <meta name="description" content="Lounge Asiaはブリスベンのアジア系プロフェッショナルに向けて、交流イベントやスピードデーティングを通じて心地よいつながりを育むコミュニティです。">
+    <meta name="robots" content="index,follow">
+    <link rel="canonical" href="https://www.loungeasia.com.au/">
+    <meta property="og:title" content="Lounge Asia - Brisbane's East Asian Community">
+    <meta property="og:description" content="アジア系コミュニティ向けのイベント運営、ネットワーキング、スピードデーティング情報を届けるLounge Asiaの公式ホームページ。">
+    <meta property="og:url" content="https://www.loungeasia.com.au/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.loungeasia.com.au/assets/og-image.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Lounge Asia - Brisbane's East Asian Community">
+    <meta name="twitter:description" content="ブリスベンでアジア系の仲間と出会えるイベントやコンテンツを発信するLounge Asiaの最新情報をチェック。">
+    <meta name="twitter:image" content="https://www.loungeasia.com.au/assets/og-image.jpg">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGWNF5BZS1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PGWNF5BZS1');
+    </script>
     
     <!-- Optimized CSS -->
     <link rel="preload" href="assets/main.min.css?v=20241020" as="style">
@@ -16,6 +37,24 @@
     <link rel="preload" as="image" href="assets/hero-bg-desktop.webp" type="image/webp">
     <link rel="preload" as="image" href="assets/hero-bg-mobile.webp" type="image/webp" media="(max-width: 768px)">
     <meta name="theme-color" content="#111827">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Lounge Asia",
+      "url": "https://www.loungeasia.com.au/",
+      "logo": "https://www.loungeasia.com.au/assets/logo.png",
+      "sameAs": [
+        "https://www.instagram.com/_lounge_asia/",
+        "https://www.facebook.com/profile.php?id=61575030717215"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Customer Support",
+        "email": "lounge.brisbane@gmail.com"
+      }
+    }
+    </script>
     <style>
         .hero-landing {
             background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('assets/hero-bg-desktop.webp');
@@ -44,6 +83,7 @@
                 <a href="#event" class="transition-colors duration-300 hover:text-yellow-300" data-lang-key="navEvent">Event</a>
                 <a href="#gallery" class="transition-colors duration-300 hover:text-yellow-300" data-lang-key="navGallery">Gallery</a>
                 <a href="/speed-dating/" class="transition-colors duration-300 hover:text-yellow-300">Speed Dating</a>
+                <a href="/speed-dating/lp/blog/" class="transition-colors duration-300 hover:text-yellow-300">Blog</a>
                 <a href="#contact" class="inline-flex items-center rounded-full border border-yellow-400 px-4 py-2 text-yellow-300 transition duration-300 hover:bg-yellow-400 hover:text-gray-900" data-lang-key="navContact">Contact</a>
             </nav>
 
@@ -61,6 +101,7 @@
             <a href="#event" class="block py-2 transition hover:text-yellow-300" data-lang-key="navEvent">Event</a>
             <a href="#gallery" class="block py-2 transition hover:text-yellow-300" data-lang-key="navGallery">Gallery</a>
             <a href="/speed-dating/" class="block py-2 transition hover:text-yellow-300">Speed Dating</a>
+            <a href="/speed-dating/lp/blog/" class="block py-2 transition hover:text-yellow-300">Blog</a>
             <a href="#contact" class="mt-3 block rounded-full bg-yellow-400 py-2 text-center font-semibold text-gray-900 transition hover:bg-yellow-300" data-lang-key="navContact">Contact</a>
         </div>
     </header>
@@ -101,15 +142,15 @@
                     </p>
                     <ul class="space-y-4 text-lg text-left inline-block mx-auto">
                          <li class="flex items-center">
-                            <span class="text-2xl mr-4">🗓️</span>
+                            <span class="text-2xl mr-4">欄・・/span>
                             <div data-lang-key="eventSchedule"><strong>When:</strong> Every 4th Tuesday of the month</div>
                         </li>
                         <li class="flex items-center">
-                            <span class="text-2xl mr-4">⏰</span>
+                            <span class="text-2xl mr-4">竢ｰ</span>
                             <div data-lang-key="eventTime"><strong>Time:</strong> 6:00 PM onwards</div>
                         </li>
                         <li class="flex items-center">
-                            <span class="text-2xl mr-4">📍</span>
+                            <span class="text-2xl mr-4">桃</span>
                             <div data-lang-key="eventVenue"><strong>Where:</strong> Criterion Tavern, Brisbane City</div>
                         </li>
                     </ul>
@@ -202,8 +243,8 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-col lg:flex-row items-center gap-12 reveal">
                     <div class="w-full lg:w-1/2">
-                        <a href="https://www.loungeasia.com.au/speed-dating/" target="_blank" rel="noopener" class="block overflow-hidden rounded-3xl shadow-2xl transition-transform duration-300 hover:-translate-y-1 hover:scale-[1.02]">
-                            <img src="https://www.loungeasia.com.au/speed-dating/images/1.png" alt="Speed Dating Asia - Finding Comfort and Romance" class="w-full h-full object-cover" loading="lazy" decoding="async" fetchpriority="low">
+                        <a href="/speed-dating/" target="_blank" rel="noopener" class="block overflow-hidden rounded-3xl shadow-2xl transition-transform duration-300 hover:-translate-y-1 hover:scale-[1.02]">
+                            <img src="/speed-dating/images/1.png" alt="Speed Dating Asia - Finding Comfort and Romance" class="w-full h-full object-cover" loading="lazy" decoding="async" fetchpriority="low">
                         </a>
                     </div>
                     <div class="w-full lg:w-1/2 text-center lg:text-left space-y-6">
@@ -213,7 +254,7 @@
                             Discover Lounge Asia's Speed Dating series crafted for Brisbane's Asian singles. Enjoy curated conversations, balanced pairings, and a relaxed vibe that makes meeting new people feel natural.
                         </p>
                         <div>
-                            <a href="https://www.loungeasia.com.au/speed-dating/" target="_blank" rel="noopener" class="inline-flex items-center justify-center bg-yellow-500 hover:bg-yellow-400 text-gray-900 font-bold py-3 px-8 rounded-full btn-glow" data-lang-key="speedDatingButton">
+                            <a href="/speed-dating/" target="_blank" rel="noopener" class="inline-flex items-center justify-center bg-yellow-500 hover:bg-yellow-400 text-gray-900 font-bold py-3 px-8 rounded-full btn-glow" data-lang-key="speedDatingButton">
                                 Learn More
                             </a>
                         </div>
@@ -247,7 +288,7 @@
                             Jump over to our dedicated Speed Dating page to see upcoming rounds, how matching works, and what makes the experience feel safe and relaxed.
                         </p>
                         <div>
-                            <a href="https://www.loungeasia.com.au/speed-dating/" target="_blank" rel="noopener" class="inline-flex items-center gap-3 bg-yellow-500 hover:bg-yellow-400 text-gray-900 font-bold py-3 px-8 rounded-full btn-glow transition-transform duration-200 hover:-translate-y-0.5" data-lang-key="speedDatingCtaButton">
+                            <a href="/speed-dating/" target="_blank" rel="noopener" class="inline-flex items-center gap-3 bg-yellow-500 hover:bg-yellow-400 text-gray-900 font-bold py-3 px-8 rounded-full btn-glow transition-transform duration-200 hover:-translate-y-0.5" data-lang-key="speedDatingCtaButton">
                                 Explore Speed Dating Asia
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M13 6l6 6-6 6"></path>
@@ -257,8 +298,8 @@
                     </div>
                     <div class="relative">
                         <div class="absolute inset-0 rounded-3xl bg-yellow-500/20 blur-3xl -z-10"></div>
-                        <a href="https://www.loungeasia.com.au/speed-dating/" target="_blank" rel="noopener" class="block overflow-hidden rounded-3xl shadow-2xl ring-1 ring-white/10 transition-transform duration-300 hover:-translate-y-1 hover:scale-[1.01]">
-                            <img src="https://www.loungeasia.com.au/speed-dating/images/2.png" alt="Lounge Asia Speed Dating event" class="w-full h-full object-cover" loading="lazy" decoding="async" fetchpriority="low">
+                        <a href="/speed-dating/" target="_blank" rel="noopener" class="block overflow-hidden rounded-3xl shadow-2xl ring-1 ring-white/10 transition-transform duration-300 hover:-translate-y-1 hover:scale-[1.01]">
+                            <img src="/speed-dating/images/2.png" alt="Lounge Asia Speed Dating event" class="w-full h-full object-cover" loading="lazy" decoding="async" fetchpriority="low">
                         </a>
                     </div>
                 </div>
@@ -267,22 +308,40 @@
     </main>
 
     <!-- ===== Footer ===== -->
-    <footer class="bg-gray-900 border-t border-gray-700/50 py-8">
-        <div class="container mx-auto px-6 text-center text-gray-500">
-            <div class="flex justify-center space-x-6 mb-4">
-                <a href="https://www.instagram.com/_lounge_asia/" target="_blank" class="hover:text-white transition-colors duration-300">
-                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 012.153 2.153c.247.636.398 1.363.444 2.427.048 1.024.06 1.378.06 3.808s-.012 2.784-.06 3.808c-.046 1.064-.197 1.791-.444 2.427a4.902 4.902 0 01-2.153 2.153c-.636.247-1.363.398-2.427.444-1.024.048-1.378.06-3.808.06s-2.784-.013-3.808-.06c-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-2.153-2.153c-.247-.636-.398-1.363-.444-2.427-.048-1.024-.06-1.378-.06-3.808s.012-2.784.06-3.808c.046-1.064.197-1.791.444-2.427a4.902 4.902 0 012.153-2.153c.636-.247 1.363.398 2.427.444C9.531 2.013 9.885 2 12.315 2zM12 7a5 5 0 100 10 5 5 0 000-10zm0-2a7 7 0 110 14 7 7 0 010-14zm6.406-1.11a1.423 1.423 0 100 2.846 1.423 1.423 0 000-2.846z" clip-rule="evenodd" /></svg>
+    <footer class="bg-slate-950 py-10 border-t border-gray-700/40">
+        <div class="mx-auto flex max-w-5xl flex-col items-center gap-4 px-6 text-center text-sm text-slate-400">
+            <p class="text-base font-semibold text-white">Lounge Asia</p>
+            <p class="max-w-2xl text-sm text-slate-400">
+                Creating comfort, connection, and community for Brisbane's Asian professionals.
+            </p>
+            <div class="flex flex-wrap items-center justify-center gap-4 text-slate-300">
+                <a href="mailto:lounge.brisbane@gmail.com" class="inline-flex items-center gap-1 hover:text-white">
+                    <span>&#128231;</span> <span>Email</span>
                 </a>
-                <a href="https://www.facebook.com/profile.php?id=61575030717215" target="_blank" class="hover:text-white transition-colors duration-300">
-                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg>
+                <span class="hidden sm:inline">&bull;</span>
+                <a href="https://www.instagram.com/_lounge_asia/" target="_blank" rel="noopener" class="inline-flex items-center gap-1 hover:text-white">
+                    <span>&#128248;</span> <span>Instagram</span>
+                </a>
+                <span class="hidden sm:inline">&bull;</span>
+                <a href="https://www.facebook.com/profile.php?id=61575030717215" target="_blank" rel="noopener" class="inline-flex items-center gap-1 hover:text-white">
+                    <span>&#128172;</span> <span>Facebook</span>
+                </a>
+                <span class="hidden sm:inline">&bull;</span>
+                <a href="/speed-dating/lp/" class="inline-flex items-center gap-1 text-xs text-slate-500 hover:text-slate-300" aria-label="Additional speed dating landing page">
+                    <span>&#128196;</span> <span>Event LP</span>
                 </a>
             </div>
-            <p class="mb-2" data-lang-key="footerOrganizer">Organizer: Brisbane Japanese Bridge</p>
-            <p>&copy; 2025 Lounge Asia</p>
+            <div class="flex flex-wrap items-center justify-center gap-2 text-xs text-slate-500">
+                <a href="/speed-dating/privacy.html" class="transition hover:text-slate-300">Privacy Policy</a>
+                <span class="text-slate-600">&bull;</span>
+                <a href="/speed-dating/terms.html" class="transition hover:text-slate-300">Terms of Service</a>
+            </div>
+            <p>&copy; 2025 Lounge Asia. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="assets/main.min.js?v=20241020" defer></script>
 </body>
 </html>
+
 
