--- a/speed-dating/index.html
+++ b/speed-dating/index.html
@@ -1,13 +1,57 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Speed Dating Asia &ndash; Finding Comfort and Romance | Lounge Asia</title>
-    <meta
-      name="description"
-      content="Meet Brisbane's Asian singles in a relaxed Lounge Asia setting. Register now for balanced pairings, ID-verified guests, and next-day matching results."
-    />
+    <meta name="description" content="Lounge Asiaが運営するSpeed Dating Asiaは、ID確認済みのゲストとバランスの取れたマッチングで安心して出会えるブリスベンのスピードデーティングイベントです。" />
+    <meta name="robots" content="index,follow">
+    <link rel="canonical" href="https://www.loungeasia.com.au/speed-dating/">
+    <meta property="og:title" content="Speed Dating Asia &ndash; Finding Comfort and Romance | Lounge Asia" />
+    <meta property="og:description" content="ブリスベンのアジア系コミュニティ向けに、安全でバランスのとれたペアリングと翌日のマッチ結果共有を行うSpeed Dating Asiaの詳しいご案内。" />
+    <meta property="og:url" content="https://www.loungeasia.com.au/speed-dating/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.loungeasia.com.au/speed-dating/images/og-speed-dating.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Speed Dating Asia &ndash; Finding Comfort and Romance | Lounge Asia">
+    <meta name="twitter:description" content="安心できるラウンジ空間でアジア系シングルと出会えるSpeed Dating Asia。ID確認と次の日のマッチ結果通知で信頼できる出会いをサポートします。" />
+    <meta name="twitter:image" content="https://www.loungeasia.com.au/speed-dating/images/og-speed-dating.jpg">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGWNF5BZS1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PGWNF5BZS1');
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Event",
+      "name": "Lounge Asia Speed Dating Asia",
+      "eventStatus": "https://schema.org/EventScheduled",
+      "eventAttendanceMode": "https://schema.org/OfflineEventAttendanceMode",
+      "organizer": {
+        "@type": "Organization",
+        "name": "Lounge Asia",
+        "url": "https://www.loungeasia.com.au/"
+      },
+      "location": {
+        "@type": "Place",
+        "name": "Brisbane CBD (詳細は参加確定後にお知らせします)",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Brisbane",
+          "addressRegion": "QLD",
+          "addressCountry": "AU"
+        }
+      },
+      "description": "Lounge Asiaが運営するアジア系コミュニティ向けスピードデーティングイベント。身分証確認・男女比調整・翌日のマッチ結果通知で安心して参加できます。"
+    }
+    </script>
+
+      
     <link rel="icon" type="image/svg+xml" href="../vite.svg" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -48,12 +92,20 @@
     <header class="absolute inset-x-0 top-0 z-20">
       <nav class="mx-auto flex max-w-6xl items-center justify-between px-6 py-5">
         <a href="/" class="text-lg font-semibold tracking-wide text-white">Lounge Asia</a>
-        <a
-          href="/"
-          class="rounded-full border border-white/30 px-4 py-1 text-sm font-medium text-white transition hover:border-white hover:bg-white/10"
-        >
-          Back to Home
-        </a>
+        <div class="flex items-center gap-3">
+          <a
+            href="/speed-dating/lp/blog/"
+            class="rounded-full border border-white/30 px-4 py-1 text-sm font-medium text-white transition hover:border-white hover:bg-white/10"
+          >
+            Blog
+          </a>
+          <a
+            href="/"
+            class="rounded-full border border-white/30 px-4 py-1 text-sm font-medium text-white transition hover:border-white hover:bg-white/10"
+          >
+            Back to Home
+          </a>
+        </div>
       </nav>
     </header>
 
@@ -212,7 +264,7 @@
               <div>
                 <dt class="text-xs font-semibold uppercase tracking-widest text-slate-500">&#128205; Location</dt>
                 <dd class="mt-1 text-base font-medium text-slate-900 leading-relaxed">
-                  The Stock Exchange Hotel – Level 2<br />
+                  The Stock Exchange Hotel - Level 2<br />
                   166 Charlotte St, Brisbane City QLD 4000.
                 </dd>
               </div>
@@ -406,11 +458,11 @@
           <a href="mailto:lounge.brisbane@gmail.com" class="inline-flex items-center gap-1 hover:text-white">
             <span>&#128231;</span> <span>Email</span>
           </a>
-          <span class="hidden sm:inline">•</span>
+          <span class="hidden sm:inline">&bull;</span>
           <a href="https://www.instagram.com/_lounge_asia/" target="_blank" rel="noopener" class="inline-flex items-center gap-1 hover:text-white">
             <span>&#128248;</span> <span>Instagram</span>
           </a>
-          <span class="hidden sm:inline">•</span>
+          <span class="hidden sm:inline">&bull;</span>
           <a
             href="https://www.facebook.com/profile.php?id=61575030717215"
             target="_blank"
@@ -419,7 +471,7 @@
           >
             <span>&#128172;</span> <span>Facebook</span>
           </a>
-          <span class="hidden sm:inline">•</span>
+          <span class="hidden sm:inline">&bull;</span>
           <a
             href="/speed-dating/lp/"
             class="inline-flex items-center gap-1 text-xs text-slate-500 hover:text-slate-300"
@@ -428,7 +480,12 @@
             <span>&#128196;</span> <span>Event LP</span>
           </a>
         </div>
-        <p>© 2025 Lounge Asia. All rights reserved.</p>
+        <div class="flex flex-wrap items-center justify-center gap-2 text-xs text-slate-500">
+          <a href="/speed-dating/privacy.html" class="transition hover:text-slate-300">Privacy Policy</a>
+          <span class="text-slate-600">&bull;</span>
+          <a href="/speed-dating/terms.html" class="transition hover:text-slate-300">Terms of Service</a>
+        </div>
+        <p>&copy; 2025 Lounge Asia. All rights reserved.</p>
       </div>
     </footer>
   </body>
