--- a/au-luxe-landing/index.html
+++ b/au-luxe-landing/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,6 +11,8 @@
     <meta name="description" content="Meet Brisbane's Asian singles in one unforgettable evening. Verified guests, balanced pairings, and instant match results. Join the waitlist today!" />
     <meta name="author" content="Lounge Asia" />
     <meta name="keywords" content="speed dating Brisbane, Asian singles Brisbane, dating events Brisbane, meet Asian singles, Brisbane speed dating" />
+    <meta name="robots" content="index,follow" />
+    <link rel="canonical" href="https://www.loungeasia.com.au/speed-dating/lp/" />
 
     <meta property="og:title" content="Lounge Asia Speed Dating Brisbane | Meet Asian Singles" />
     <meta property="og:description" content="Meet Brisbane's Asian singles in one unforgettable evening. Verified guests, balanced pairings, and instant match results." />
@@ -21,6 +23,15 @@
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGWNF5BZS1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-PGWNF5BZS1');
+    </script>
+
     <!-- Preload critical assets -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
