--- a/index.html
+++ b/index.html
@@ -457,6 +457,23 @@
                             A business owner working in education and study abroad services. Currently working to expand the business using AI. Let’s talk passionately about AI-powered business!
                          </p>
                      </div>
+
+                     <!-- Kazuma (Tokyo) -->
+                     <div class="bg-gray-800 rounded-2xl p-8 border border-gray-700 hover:border-brand-primary transition-all duration-300 group hover:-translate-y-2 hover:shadow-xl hover:shadow-brand-primary/10">
+                         <div class="w-40 h-40 mx-auto mb-6 rounded-full overflow-hidden border-4 border-gray-700 group-hover:border-brand-primary transition-colors shadow-lg">
+                             <img src="assets/kazuma.jpg" alt="Kazuma - Tokyo Organizer" class="w-full h-full object-cover transform transition-transform duration-500 group-hover:scale-110">
+                         </div>
+                         <div class="inline-block px-4 py-1.5 bg-red-500/10 text-red-500 text-xs font-bold rounded-full mb-4">
+                             Tokyo Organizer
+                         </div>
+                         <h3 class="text-2xl font-bold text-white mb-2">Kazuma</h3>
+                         <p class="text-gray-400 leading-relaxed">
+                             Everyone has a unique talent. Come join our meetups and share yours with us!
+                         </p>
+                         <p class="text-gray-500 text-sm mt-2 font-semibold">
+                             Founder and CEO of 整塩Totojio®︎
+                         </p>
+                     </div>
                  </div>
              </div>
         </section>
