--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                  <span class="text-brand-primary font-bold tracking-wide uppercase text-sm mb-2 block">Our Leaders</span>
                  <h2 class="text-3xl md:text-5xl font-bold mb-12 text-white">Meet Your Local Heroes</h2>
                  
-                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-[90rem] mx-auto">
+                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-[90rem] mx-auto">
                      <!-- Michael (Founder) -->
                      <div class="bg-gray-800 rounded-2xl p-8 border border-gray-700 hover:border-brand-primary transition-all duration-300 group hover:-translate-y-2 hover:shadow-xl hover:shadow-brand-primary/10">
                          <div class="w-40 h-40 mx-auto mb-6 rounded-full overflow-hidden border-4 border-gray-700 group-hover:border-brand-primary transition-colors shadow-lg">
@@ -472,6 +472,20 @@
                          </p>
                          <p class="text-gray-500 text-sm mt-2 font-semibold">
                              Founder and CEO of 整塩Totojio®︎
+                         </p>
+                     </div>
+
+                     <!-- Hiroshi (Fukuoka) -->
+                     <div class="bg-gray-800 rounded-2xl p-8 border border-gray-700 hover:border-brand-primary transition-all duration-300 group hover:-translate-y-2 hover:shadow-xl hover:shadow-brand-primary/10">
+                         <div class="w-40 h-40 mx-auto mb-6 rounded-full overflow-hidden border-4 border-gray-700 group-hover:border-brand-primary transition-colors shadow-lg">
+                             <img src="assets/hiroshi.jpg" alt="Hiroshi - Fukuoka Organizer" class="w-full h-full object-cover transform transition-transform duration-500 group-hover:scale-110">
+                         </div>
+                         <div class="inline-block px-4 py-1.5 bg-yellow-500/10 text-yellow-500 text-xs font-bold rounded-full mb-4">
+                             Fukuoka Organizer
+                         </div>
+                         <h3 class="text-2xl font-bold text-white mb-2">Hiroshi</h3>
+                         <p class="text-gray-400 leading-relaxed">
+                             Owner of 'Monji Saketen' in Miyawaka, Fukuoka. Taking over in 2019, he connects local brewers and farmers with the community. Believing sake creates a space for stories and new meetings, he aims to build a warm, inclusive community in Fukuoka that transcends borders and generations.
                          </p>
                      </div>
                  </div>
