fix: resolve Hiroshi image error

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                      <!-- Hiroshi (Fukuoka) -->
                      <div class="bg-gray-800 rounded-2xl p-8 border border-gray-700 hover:border-brand-primary transition-all duration-300 group hover:-translate-y-2 hover:shadow-xl hover:shadow-brand-primary/10">
                          <div class="w-40 h-40 mx-auto mb-6 rounded-full overflow-hidden border-4 border-gray-700 group-hover:border-brand-primary transition-colors shadow-lg">
-                             <img src="assets/hiroshi.jpg" alt="Hiroshi - Fukuoka Organizer" class="w-full h-full object-cover transform transition-transform duration-500 group-hover:scale-110">
+                             <img src="assets/hiroshi_fixed.jpg" alt="Hiroshi - Fukuoka Organizer" class="w-full h-full object-cover transform transition-transform duration-500 group-hover:scale-110">
                          </div>
                          <div class="inline-block px-4 py-1.5 bg-yellow-500/10 text-yellow-500 text-xs font-bold rounded-full mb-4">
                              Fukuoka Organizer
