--- a/index.html
+++ b/index.html
@@ -447,6 +447,42 @@
                          </p>
                      </div>
 
+                     <!-- Anna (Brisbane) -->
+                     <div class="bg-gray-800 rounded-2xl p-8 border border-gray-700 hover:border-brand-primary transition-all duration-300 group hover:-translate-y-2 hover:shadow-xl hover:shadow-brand-primary/10">
+                         <div class="w-40 h-40 mx-auto mb-6 rounded-full overflow-hidden border-4 border-gray-700 group-hover:border-brand-primary transition-colors shadow-lg">
+                             <img src="assets/anna.jpg" alt="Anna - Brisbane Host" class="w-full h-full object-cover object-top transform transition-transform duration-500 group-hover:scale-110">
+                         </div>
+                         <div class="inline-block px-4 py-1.5 bg-green-500/10 text-brand-primary text-xs font-bold rounded-full mb-4">
+                             Brisbane Host
+                         </div>
+                         <h3 class="text-2xl font-bold text-white mb-2">Anna</h3>
+                         <p class="text-gray-400 leading-relaxed">
+                             I'm Anna.<br>
+                             I'm from Japan.<br>
+                             My favorite food is Pad Thai.<br>
+                             I like beautiful nature.<br>
+                             I wanna make a lot of friends^^
+                         </p>
+                     </div>
+
+                     <!-- Yuka (Brisbane) -->
+                     <div class="bg-gray-800 rounded-2xl p-8 border border-gray-700 hover:border-brand-primary transition-all duration-300 group hover:-translate-y-2 hover:shadow-xl hover:shadow-brand-primary/10">
+                         <div class="w-40 h-40 mx-auto mb-6 rounded-full overflow-hidden border-4 border-gray-700 group-hover:border-brand-primary transition-colors shadow-lg">
+                             <img src="assets/Yuka.jpg" alt="Yuka - Brisbane Host" class="w-full h-full object-cover transform transition-transform duration-500 group-hover:scale-110">
+                         </div>
+                         <div class="inline-block px-4 py-1.5 bg-green-500/10 text-brand-primary text-xs font-bold rounded-full mb-4">
+                             Brisbane Host
+                         </div>
+                         <h3 class="text-2xl font-bold text-white mb-2">Yuka</h3>
+                         <p class="text-gray-400 leading-relaxed">
+                             Hi! I’m Yuka, and I’m here from Japan on a working holiday.<br>
+                             I absolutely love sushi and Korean food!<br>
+                             While I’m in Australia, I’d love to try surfing.<br>
+                             I also really want to have a proper Aussie BBQ with Aussie beef and even kangaroo meat!<br>
+                             I’d love to get to know you
+                         </p>
+                     </div>
+
                      <!-- Naoki (Brisbane) -->
                      <div class="bg-gray-800 rounded-2xl p-8 border border-gray-700 hover:border-brand-primary transition-all duration-300 group hover:-translate-y-2 hover:shadow-xl hover:shadow-brand-primary/10">
                          <div class="w-40 h-40 mx-auto mb-6 rounded-full overflow-hidden border-4 border-gray-700 group-hover:border-brand-primary transition-colors shadow-lg">
@@ -490,6 +526,8 @@
                          <p class="text-gray-400 leading-relaxed">
                              Owner of 'Monji Saketen' in Miyawaka, Fukuoka. Taking over in 2019, he connects local brewers and farmers with the community. Believing sake creates a space for stories and new meetings, he aims to build a warm, inclusive community in Fukuoka that transcends borders and generations.
                          </p>
+                     </div>
+
                      </div>
                  </div>
              </div>
