feat: expand global hubs to 11 cities with premium icons and unified design

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
              <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                     <span class="text-brand-accent font-bold tracking-wide uppercase text-sm mb-2 block">Join the Community</span>
-                    <h2 class="text-3xl md:text-5xl font-bold mb-4 text-white">Upcoming Events</h2>
-                    <p class="text-xl text-gray-400 max-w-2xl mx-auto">Connect with us in person. Please RSVP on Meetup.</p>
+                    <h2 class="text-3xl md:text-5xl font-bold mb-4 text-white">Expanding to 10 Global Hubs</h2>
+                    <p class="text-xl text-gray-400 max-w-2xl mx-auto">Wherever you go, you have a family waiting for you.</p>
                 </div>
                 <div id="meetup-events-container">
                     <!-- Loaded via JS -->
