--- a/index.html
+++ b/index.html
@@ -846,6 +846,11 @@
             <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
                 <div class="text-center md:text-left">
                     <span class="text-2xl font-bold text-white tracking-tight">Lounge Asia</span>
+                    <div class="mt-2">
+                        <a href="/parents/" class="text-gray-500 text-sm hover:text-white">
+                            For Parents
+                        </a>
+                    </div>
                     <p class="text-gray-500 text-sm mt-2">© 2026 Lounge Asia. All rights reserved.</p>
                 </div>
                 
