--- a/brisbane-asian-blogging/index.html
+++ b/brisbane-asian-blogging/index.html
@@ -12,14 +12,14 @@
     <meta property="og:title" content="Lounge Asia Blog - ブリスベンのアジアンコミュニティ情報" />
     <meta property="og:description" content="ブリスベンのアジア人コミュニティ向けブログ。イベント、ライフスタイル、グルメ情報を発信。" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/assets/hero-real.jpg" />
     <meta property="og:url" content="https://loungeasia.com.au/blog" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Lounge Asia Blog" />
     <meta name="twitter:description" content="ブリスベンのアジア人コミュニティ向けブログ" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/assets/hero-real.jpg" />
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
