--- a/apps/parents-lp/index.html
+++ b/apps/parents-lp/index.html
@@ -9,10 +9,10 @@
     <meta property="og:title" content="Lounge Asia - Secure Study & Mentorship" />
     <meta property="og:description" content="Free Visa & School Support + Onshore Mentorship Network for international students in Australia." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/assets/hero-real.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@LoungeAsia" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/assets/hero-real.jpg" />
   </head>
   <body>
     <div id="root"></div>
