--- a/fortune-funnel/index.html
+++ b/fortune-funnel/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Thread of Destiny - Unravel Your Love Story" />
     <meta property="og:description" content="Personalised AI love fortune and compatibility readings guided by Four Pillars of Destiny. Find your perfect match at Brisbane's speed dating events." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/assets/hero-real.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@LoungeAsia" />
+    <meta name="twitter:image" content="/assets/hero-real.jpg" />
   </head>
 
   <body>
