--- a/index.html
+++ b/index.html
@@ -847,13 +847,20 @@
             <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-6">
                 <div class="text-center md:text-left">
                     <span class="text-2xl font-bold text-white tracking-tight">Lounge Asia</span>
+                    <div class="mt-2 text-gray-500 text-xs">
+                        ABN 72 472 785 236
+                    </div>
                     <div class="mt-4">
                         <a href="parents/" class="text-gray-300 hover:text-white font-medium flex items-center gap-2 group">
                             <span>Secure Education (For Parents)</span>
                             <svg class="w-4 h-4 text-brand-primary group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                         </a>
                     </div>
-                    <p class="text-gray-500 text-sm mt-2">© 2026 Lounge Asia. All rights reserved.</p>
+                    <div class="flex flex-wrap gap-4 text-xs text-gray-500 mt-4 justify-center md:justify-start">
+                        <a href="privacy.html" class="hover:text-white transition-colors">Privacy Policy</a>
+                        <a href="terms.html" class="hover:text-white transition-colors">Terms of Service</a>
+                    </div>
+                    <p class="text-gray-600 text-xs mt-2">© 2026 Lounge Asia. All rights reserved.</p>
                 </div>
                 
                 <div class="flex gap-6">
