--- a/speed-dating/lp/index.html
+++ b/speed-dating/lp/index.html
@@ -17,11 +17,11 @@
     <meta property="og:title" content="Lounge Asia Speed Dating Australia | Meet Asian Singles" />
     <meta property="og:description" content="Meet Australia's Asian singles in one unforgettable evening. Verified guests, balanced pairings, and instant match results." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/assets/hero-real.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@LoungeAsia" />
+    <meta name="twitter:image" content="/assets/hero-real.jpg" />
     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGWNF5BZS1"></script>
